--- a/package.json
+++ b/package.json
@@ -18,57 +18,17 @@
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/index.esm.js"
+        "default": "./dist/react-utils.esm.js"
       },
       "require": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
       }
-    },
-    "./dev": {
-      "import": {
-        "types": "./dist/dev/index.d.ts",
-        "default": "./dist/dev/index.esm.js"
-      },
-      "require": {
-        "types": "./dist/dev/index.d.ts",
-        "default": "./dist/dev/index.js"
-      }
-    },
-    "./is": {
-      "import": {
-        "types": "./dist/is/index.d.ts",
-        "default": "./dist/is/index.esm.js"
-      },
-      "require": {
-        "types": "./dist/is/index.d.ts",
-        "default": "./dist/is/index.js"
-      }
-    },
-    "./svg": {
-      "import": {
-        "types": "./dist/svg/index.d.ts",
-        "default": "./dist/svg/index.esm.js"
-      },
-      "require": {
-        "types": "./dist/svg/index.d.ts",
-        "default": "./dist/svg/index.js"
-      }
     }
   },
   "types": "dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "dev": [
-        "dist/dev/index.d.ts"
-      ],
-      "svg": [
-        "dist/svg/index.d.ts"
-      ]
-    }
-  },
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/react-utils.esm.js",
   "files": [
     "dist",
     "CHANGELOG.md",
@@ -79,8 +39,8 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "dts build --entry src/index.ts --entry 'src/*/index.ts'",
-    "start": "dts watch --entry src/index.ts --entry 'src/*/index.ts'",
+    "build": "dts build",
+    "start": "dts watch",
     "prepare": "npm run build",
     "test": "tsc --noEmit && dts test",
     "test:watch": "npm test -- --watch",
@@ -143,11 +103,11 @@
   },
   "size-limit": [
     {
-      "path": "dist/index.cjs.production.min.js",
+      "path": "dist/react-utils.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/index.esm.js",
+      "path": "dist/react-utils.esm.js",
       "limit": "10 KB"
     }
   ]
